recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:2: error: value =! is not a member of Int
  while(steps=!0){avance(length:Double)
             ^Tree:4: error: reassignment to val
            length=length*shrink
                  ^Tree:5: error: reassignment to val
            steps=steps-1}
                 ^