recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  while(steps=!0){avance(length:Double)
            right(angle:Double)
            length=length*shrink
            steps=steps-1}
}